[Update 2018-06-17]
- Changed items set links [Kato/Slap]
	Now done through SetEquipName Function
- Issue #149: Proofreading [Slap]
	Falcon Muffler: name
	Crest of the Rider: name
	Wolfheiden: description
	Mithril Magic Manteau: description
	Angel's Reincarnation: lvl req
	High Quality Sandals: name, lvl req
	Sacrifice Ring: jobid
	Shinobi Sash: def
	Bloodied Shackle Ball: name
	Horn of the Buffalo: name

[Update 2018-06-17]
- Issue #193: Fixed Marionette Contro [Slap]
	Status compensation should now cap based on base stat
- Issue #5: Corrected brewing formula [Slap]
	0.05% lower than iRO due to custom homunculus bonus
- Issue #113: Thanatos cards now stack [Slap]

[Update 2018-06-16]
- Issue #188: Added Dolor Hat [Slap]
- Issue #149: Proofreading [Slap]
	Carrot Whip: added description
	Western Outlaw: added description
	Jungle Carbine: added description
	Gatekeeper-DD: name, description
	Thunder-P: added description
	Huuma Calm Mind: name
	Magistrate Hat: added description
	Bride Mask: added description
	Mythical Lion Mask: added description
	Hahoe Mask: added description
	Ramen Hat: weight, lvl req, added unrefinable
	Whisper Mask: weight, lvl req
	Platinum Shield: description
	Eagle Wing: name
	Morrigane's Manteau: name

[Update 2018-06-15]
- Corrected negative hit [Slap]
- Added links for 601-650 [Slap]
- Issue #149: Proofreading [Slap] //For the sake of my sanity proofreading notes will not be as detailed as before; will only indicate what has been modified, not how
	Vacation Hat: name, type
	Water Lily Crown: name
	Lucius's Fierce Armor of Volcano: name
	Mes: updated effect/description
	Thin Blade: updated effect/description
	Muscle Cutter: updated effect/description
	Long Horn: updated effect/description
	Freezing Bow: updated effect/description
	Earthen Bow: updated effect/description
	Gale Bow: updated effect/description //Auto-generated autospell effect removed since it's only active when Arrow of Wind is equipped. Description updated to reflect this.