@@ -657,7 +657,7 @@ AutoSpellSkill = [
 [51,1,130,5,0,1],
 [52,1,125,3,0,1],
 [53,1,162,3,0,6],
-[54,0,172,1,0,1],
+[54,1,172,1,5,1],
 [55,0,28,3,0,1],
 [56,0,42,1,0,6],
 [57,0,98,10,0,6],
@@ -683,7 +683,7 @@ AutoSpellSkill = [
 [77,0,239,1,4,1],
 [78,1,6,1,0,1],
 [79,1,52,3,0,1],
-[80,0,174,1,0,1],
+[80,1,174,1,5,1],
 [81,0,32,1,0,6],
 [82,0,227,1,0,1],
 [83,0,267,1,0,10],
